completed 2_cloudera-manager.repo.md